--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,5 @@ dependencies {
 
     implementation 'com.android.volley:volley-cronet:1.2.1'
 
-
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
